--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -1,2 +1,3 @@
 ${project.parent.artifactId}.title=Data Aggregation Module
 ${project.parent.artifactId}.manage=Manage module
+${project.parent.artifactId}.queries=Queries
