Added Examples tab

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -2,3 +2,5 @@ ${project.parent.artifactId}.title=Data Aggregation Module
 ${project.parent.artifactId}.manage=Manage module
 ${project.parent.artifactId}.queries=Queries
 ${project.parent.artifactId}.queries.title=List of Queries
+${project.parent.artifactId}.examples=Examples
+${project.parent.artifactId}.examples.title=Examples
